results/demo_20260121_074735/netfail/allow-api-to-auth.backup.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"creationTimestamp":"2026-01-21T07:35:15Z","generation":1,"name":"allow-api-to-auth","namespace":"resilience","resourceVersion":"54899","uid":"ef7c4dcf-0363-4bca-b1f9-01c7daf1eea6"},"spec":{"egress":[{"ports":[{"port":8000,"protocol":"TCP"}],"to":[{"podSelector":{"matchLabels":{"app":"auth"}}}]}],"podSelector":{"matchLabels":{"app":"api"}},"policyTypes":["Egress"]}}
  creationTimestamp: "2026-01-21T07:43:54Z"
  generation: 1
  name: allow-api-to-auth
  namespace: resilience
  resourceVersion: "55627"
  uid: 5624f9a5-f1fb-40dd-ba32-bba8d0edce57
spec:
  egress:
  - ports:
    - port: 8000
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: auth
  podSelector:
    matchLabels:
      app: api
  policyTypes:
  - Egress
